Correction du texte + ajout fonctionnalitité phone

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--Ecran portrait Smartphone-->
     <div id="changeScreen">
-        <p>Please, turn your phone in portrait format. This website is unavaible in landscape format for smartphone.</p>
+        <p>This website is unavaible in landscape format for smartphone.</p>
     </div>
 
 
@@ -43,9 +43,9 @@
     <header>
         <img src="img/Radio.svg" alt="" id="muted-btn">
         <div class="bg"></div>
-        <div class="LogoSite">
+        <a href="#Presentation" class="LogoSite">
             <img src="img/Logo-Long.svg" alt="Logo WebSite Fallout 'Brand New Road'">
-        </div>
+        </a>
         <nav>
             <a href="#Presentation" class="CatMenu">Presentation</a>
             <a href="#Chronologie" class="CatMenu Mid">Chronology</a>
@@ -103,7 +103,7 @@
                     <input type="radio" id="2052" name="Frise" value="2052">
                     <div class="DateContent D2C">
                         <div class="Texte">
-                            <p>In 2052, oil reserves begin to run dry and Resource Wars begin across the world. In first, Mexico has been invaded in 2051 by the USA to enhance, insignificantly, their production of oil. Next year, the European Commonwealths started a campaign to conquest the Middle East and acquire their resources. At the same period, New Plagues arise in the US and kill more than 200 000 people, a national lockdown has been declared at the end of the year.     </p>
+                            <p>In 2052, oil reserves begin to run dry and Resource Wars begin across the world. In first, Mexico has been invaded in 2051 by the USA to enhance, insignificantly, their production of oil. Next year, the European Commonwealths started a campaign to conquest the Middle East and acquire their resources. At the same period, New Plagues arise in the U.S. and kill more than 200 000 people, a national lockdown has been declared at the end of the year.     </p>
                         </div>
                         <div class="photoDate">
                             <span id="P2"></span>
@@ -133,7 +133,7 @@
                     <input type="radio" id="2077" name="Frise" value="2077">
                     <div class="DateContent D2C">
                         <div class="Texte">
-                            <p>In 2075, a new project lead by Week Task is born, his objective is to cure the New Plague but it evolves into a virus to create super soldiers by increasing size and resistance to viral contagions. On January 10th, 2077, Alaska has been retaken by the American forces. A few months later, the October 23rd the Great War begins. The world seeing Chinese and American nuclear bombs deploy, each country deploys their own, and an exchange of fire ensued.  No one knows who strikes first. In less than 2 hours, nuclear warheads strike the entire world.  </p>
+                            <p>In 2075, a new project lead by Wesk Tek is born, his objective is to cure the New Plague but it evolves into a virus to create super soldiers by increasing size and resistance to viral contagions. On January 10th, 2077, Alaska has been retaken by the American forces. A few months later, the October 23rd the Great War begins. The world seeing Chinese and American nuclear bombs deploy, each country deploys their own, and an exchange of fire ensued.  No one knows who strikes first. In less than 2 hours, nuclear warheads strike the entire world.  </p>
                         </div>
                         <div class="photoDate">
                             <span id="P5"></span>
@@ -215,7 +215,7 @@
 
             <footer>
                 <p>Made by Victor Sin</p>
-                <p>©2021 | <a href="#">Mentions Légales</a></p>
+                <p>©2021 | <a href="#">Legal Mentions</a></p>
                 <a href="mailto:sin.victor@outlook.fr">sin.victor@outlook.fr</a>
             </footer>
         </div>
